syntax = "proto3";
package users;

option go_package = "github.com/Erickype/GoBonsaiAlbum/gRPC/users";

message User{
  int32 id = 1;
  string userName = 2;
  string userLastname = 3;
  string userNickname = 4;
}

//Req and res
message CreateUserReq{
  string userName = 1;
  string userLastname = 2;
  string userNickname = 3;
}

message CreateUserRes{
  int32 id = 1;
}

//service users
service Users{
  //CreateUser
  rpc CreateUser(CreateUserReq) returns (CreateUserRes);
}

